libs/pavex_macros/tests/constructor/fail/no_lifecycle.stderr
error: You must specify the lifecycle of your constructor. It can either be `singleton`, `request_scoped`, or `transient`
 --> tests/constructor/fail/no_lifecycle.rs:6:5
  |
6 |     #[constructor]
  |     ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `constructor` (in Nightly builds, run with -Z macro-backtrace for more info)
